--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,20 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Vite / build output
+dist/
+.vite/
+
+# Env files (NEVER commit)
+.env
+.env.*
+!.env.example
+
+# OS junk
+.DS_Store
+Thumbs.db
+
+# Optional local notes
+snapshots/
+
